--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body class="has-background-warning-light">
+    <label class="label">Find Your Event</label>
+    <div class="columns">
+      <div class="column">
+        <div class="field">
+          <div class="control">
+            <input class="input" type="text" placeholder="City" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="columns">
+      <div class="column">
+        <div class="field">
+          <div class="control">
+            <input class="input" type="text" placeholder="Artist" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button class="button is-info">Search</button>
+  </body>
 </html>
