added header and background image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 <body>
-    <header class="has-text-centered">
-        <h1 class="title is-size-1 is-size-4-mobile py-1">Event Finder</h1>
-    </header>
+    <section id="hero">
+        <header class="has-text-centered">
+            <h1 class="title is-size-1 is-size-2-mobile py-1">Event Finder</h1>
+            <p class="px-6 is-size-3 has-text-weight-semibold">
+                We will help you find the events you are looking for while also providing the quickest way to get there!
+            </p>
+        </header>
+    </section>
 </body>
 </html>
