--- a/index.html
+++ b/index.html
@@ -12,10 +12,38 @@
     <section id="hero">
         <header class="has-text-centered">
             <h1 class="title is-size-1 is-size-2-mobile py-1">Event Finder</h1>
-            <p class="px-6 is-size-3 has-text-weight-semibold">
+            <p class="px-6 is-size-5 has-text-weight-bold">
                 We will help you find the events you are looking for while also providing the quickest way to get there!
             </p>
         </header>
     </section>
+    <div id="form-container">
+        <form id="form" class="px-6 pb-3 mx-6 mt-5 is-flex is-flex-direction-column">
+            <div class="is-flex is-justify-content-center mb-2">
+                <h2 class="has-text-centered is-size-2 is-size-3-mobile py-2"><b>Find Your Event</b></h2>
+            </div>           
+            <div class="field">
+                <label class="label">City Name:</label>
+                <div class="control">
+                    <input class="input is-medium" type="text" placeholder="City" id = "search-city" />
+                </div>
+            </div>           
+            <div class="field">
+                <label class="label">Artist:</label>
+                <div class="control">
+                    <input class="input is-medium" type="text" placeholder="Artist" id = "search-artist"/>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label">Genre:</label>
+                <div class="control">
+                    <input class="input is-medium" type="text" placeholder="Genre" id = "search-artist"/>
+                </div>
+            </div>
+            <button id="form-button" class="button p-3">Search</button> 
+        </form>
+    </div> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="Assets/js/script.js"></script>
 </body>
 </html>
