--- a/index.html
+++ b/index.html
@@ -12,27 +12,49 @@
   </head>
 
   <body class="has-background-warning-light">
-    <label class="label">Find Your Event</label>
+      <h1>Find Your Event</h1>
+    <label class="label">City Name</label>
     <div class="columns">
       <div class="column">
         <div class="field">
           <div class="control">
-            <input class="input" type="text" placeholder="City" />
+            <input class="input" type="text" placeholder="City" id = "search-city" />
           </div>
         </div>
       </div>
     </div>
 
+    <label class="label">Artist/s</label>
     <div class="columns">
       <div class="column">
         <div class="field">
           <div class="control">
-            <input class="input" type="text" placeholder="Artist" />
+            <input class="input" type="text" placeholder="Artist" id = "search-artist"/>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <label class="label">Genre:</label>
+    <div class="columns">
+      <div class="column">
+        <div class="field">
+          <div class="control">
+            <input class="input" type="text" placeholder="Genre" id = "search-artist"/>
           </div>
         </div>
       </div>
     </div>
 
     <button class="button is-info">Search</button>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Event Finder</strong> 
+            Made with 💜
+          </p>
+        </div>
+      </footer>
   </body>
 </html>
