added fetch for ticketmaster api

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="field">
                 <label class="label">City Name:</label>
                 <div class="control">
-                    <input class="input is-medium" type="text" placeholder="City" id = "search-city" />
+                    <input id="city" class="input is-medium" type="text" placeholder="City" id = "search-city" />
                 </div>
             </div>           
             <div class="field">
                 <label class="label">Artist:</label>
                 <div class="control">
-                    <input class="input is-medium" type="text" placeholder="Artist" id = "search-artist"/>
+                    <input id="classification" class="input is-medium" type="text" placeholder="Artist" id = "search-artist"/>
                 </div>
             </div>
             <div class="field">
