--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="control">
                     <input id="city" class="input is-medium" type="text" placeholder="City" id = "search-city" />
                 </div>
-            </div>           
+            </div>         
             <div class="field">
                 <label class="label">Artist:</label>
                 <div class="control">
@@ -35,14 +35,17 @@
                 </div>
             </div>
             <div class="field">
-                <label class="label">Genre:</label>
+                <label class="label">Venue:</label>
                 <div class="control">
-                    <input class="input is-medium" type="text" placeholder="Genre" id = "search-artist"/>
+                    <input id="venue" class="input is-medium" type="text" placeholder="Genre" id = "search-artist"/>
                 </div>
             </div>
             <button id="form-button" class="button p-3">Search</button> 
         </form>
     </div> 
+    <div id="button-container" class="px-6 pb-3 mt-5 is-flex is-flex-direction-column">
+        
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="Assets/js/script.js"></script>
 </body>
