added listeners to show modal

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
     <div id="button-container" class="px-6 pb-3 mt-5 is-flex is-flex-direction-column">
         
     </div>
+
+    <!--Modal-->
+    <div class="modal m">
+        <div class="modal-background"></div>
+        <div class="modal-card mx-2">
+          <header class="modal-card-head">
+            <p class="modal-card-title">Event Information</p>
+            <button class="delete" aria-label="close"></button>
+          </header>
+          <section class="modal-card-body">
+            <h4 class="event-name"></h4>
+            <p class="venue-name"></p>
+            <p class="date"></p>
+          </section>
+          <footer class="modal-card-foot">
+            
+            <button class="modal-button button">Get Directions</button>
+          </footer>
+        </div>
+      </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="Assets/js/script.js"></script>
 </body>
