cleaned out console logs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p id="venue-name"></p>
             <p class="has-text-weight-bold my-1">Date:</p>
             <p id="date"></p>
-            <p class="has-text-centered has-text-weight-medium is-italic is-size-7 py-2">Enter you address in the input bar below to get directions</p>
+            <p class="has-text-centered has-text-weight-medium is-italic is-size-7 py-2">Enter your address in the input bar below to get directions</p>
           </section>
           <footer class="modal-card-foot">
             <input id="address" class="input" type="text" placeholder="Enter your address" />
